<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFiRobot</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">启动</string>
    <string name="setting">系统设置</string>
    <string name="tv_controlPort">Control Port</string>
    <string name="tv_controlAddr">Control Address</string>
    <string name="tv_videoPort">Video Port</string>
    <string name="tv_videoAddr">Video Address</string>
    <string name="bt_advance">Fore</string>
    <string name="bt_right">Right</string>
    <string name="bt_retreat">Back</string>
    <string name="bt_stop">S</string>
    <string name="bt_left">Left</string>
    <string name="bt_save">save</string>
    <string name="bt_cancel">cancel</string>
    <string name="tv_up">Fore</string>
    <string name="tv_down">Back</string>
    <string name="tv_right">Right</string>
    <string name="tv_left">Left</string>
    <string name="tv_stop">Stop</string>
    <string name="tv_horizon">H</string>
    <string name="tv_vertical">V</string>
    <string name="tv_h_left">Cam_L</string>
    <string name="tv_h_right">Cam_R</string>
    <string name="tv_v_up">Cam_Up</string>
    <string name="tv_v_down">Cam_Dn</string>
    

</resources>