<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <com.linkspritedirect.mjpgview.MjpegView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    
    
    <TextView 
        android:id="@+id/tv_horizon"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="#FFFFFF"
        android:text="@string/tv_horizon"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <SeekBar
        android:id="@+id/sb_horizon"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" 
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/tv_horizon"
        android:layout_marginRight="215dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"/>
    
    <TextView 
        android:id="@+id/tv_vertical"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/tv_horizon"
        android:layout_marginBottom="7dp"
        android:text="@string/tv_vertical"
        android:gravity="center"
        android:background="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
        "
    
    <SeekBar
        android:id="@+id/sb_vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" 
        android:layout_above="@+id/sb_horizon"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="215dp"
        android:layout_alignLeft="@+id/sb_horizon"/>
    
    <Button 
        android:id="@+id/bt_right"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/bt_right"/>

    <Button 
        android:id="@+id/bt_retreat"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_toLeftOf="@+id/bt_right"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/bt_retreat" />
    

        
    <Button
        android:id="@+id/bt_left"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/bt_retreat"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/bt_left"/>
    
    <Button
        android:id="@+id/bt_advance"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/bt_retreat"
        android:layout_alignLeft="@+id/bt_retreat"
        android:layout_marginBottom="10dp"
        android:text="@string/bt_advance"/>
    
    <CheckBox
        android:id="@+id/cb_gravity"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tv_gravity"/>
    
    <TextView
        android:id="@+id/tv_gravity"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="G sensor"
        android:background="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="14dp"/>
    
    <TextView 
        android:id="@+id/tv_ctrl_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/cb_gravity"
        android:layout_marginRight="5dp"
        android:layout_marginTop="14dp"
        android:text="Control model"
        android:background="#FFFFFF"/>
    
    <CheckBox 
        android:id="@+id/cb_ctrl_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tv_ctrl_model"
        android:checked="true"/>
    
    <Button 
        android:id="@+id/bt_h_left"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="h_left"
        android:textSize="12sp"/>
    
    <Button 
        android:id="@+id/bt_v_down"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/bt_h_left"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="v_down"
        android:textSize="10sp"/>
    
    <Button 
        android:id="@+id/bt_h_right"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/bt_v_down"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:text="h_right"
        android:textSize="12sp"/>
    
    <Button 
        android:id="@+id/bt_v_up"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/bt_v_down"
        android:layout_alignLeft="@+id/bt_v_down"
        android:layout_marginBottom="5dp"
        android:text="v_up"
        android:textSize="12sp"/>
    

</RelativeLayout>