<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        
        <LinearLayout 
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                
                <TextView
                    android:id="@+id/tv_videoAddr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/tv_videoAddr"
                    android:textColor="#FFFFFF"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                    "
                    

            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                
            </LinearLayout>
           
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                
            </LinearLayout>
                     
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="8dp">
        
         <Button 
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/bt_save"
            android:layout_weight="1"
            android:layout_marginRight="25dp"/>
        
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:text="@string/bt_cancel"/>
        
    </LinearLayout>

</LinearLayout>